--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html{
 
 body{
     color: white;
-    background-color: rgb(24, 155, 74);
+    background-color: black;
     margin: 0px;
     padding: 0px;
     height: 100%;
@@ -62,14 +62,14 @@ ul.navbar-container{
 }
 
 .second-navbar:hover .navbar-text:hover{
-    color: rgb(16, 190, 31);
+    color: green;
     font-weight: bolder;
     cursor: pointer;
 }
 
 video{
     position: fixed;
-    width: auto;
+    width: 100%;
     height: 100%;
     z-index: -100;
     top: 0;
@@ -81,12 +81,16 @@ video{
 
 #video-background{
     overflow: hidden;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 .welcome-page-container{
     background-size: cover;
     height:800px;
-    width: auto;
+    width: 100%;
 }
 
 .welcome-page-text-container{
@@ -99,7 +103,7 @@ video{
 .welcome-page-items-flexbox{
     display: flex;
     justify-content: space-around;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
 }
 
@@ -107,6 +111,11 @@ video{
     margin-left: 50px;
     margin-right: 50px;
 
+}
+
+.propic{
+    width: 100px;
+    height: 200px;
 }
 
 .bio-container{
@@ -120,6 +129,7 @@ video{
     margin-top: 3px;
     padding-top: 15px;
     margin-bottom: 3px;
+    font-size: 30px
 }
 
 .bio-text{
