--- a/style.css
+++ b/style.css
@@ -89,18 +89,18 @@ video{
 
 .welcome-page-container{
     background-size: cover;
-    height:800px;
+    height:750px;
     width: 100%;
 }
 
 .welcome-page-text-container{
-    width:auto;
+    width:400px;
     height: 800px;
     text-align: center;
-    margin-top: 75px;
+    margin-top: 170px;
 }
 
-.welcome-page-items-flexbox{
+.welcome-page-flexbox{
     display: flex;
     justify-content: space-around;
     flex-direction: row;
@@ -113,9 +113,15 @@ video{
 
 }
 
-.propic{
-    width: 100px;
-    height: 200px;
+.propic-container{
+    height:600px;
+    width: 400px;
+}
+
+#propic{
+    border-radius: 10px;
+    height: 450px;
+    width: 300px;
 }
 
 .bio-container{
@@ -149,62 +155,10 @@ video{
     padding-top: 15px;
 }
 
-.portfolio-container{
-    background-color:rgb(139, 94, 211);
-    background-size: cover;
-    height: 400px;
-    width: auto;
-}
 
-.portfolio-title{
-    text-align: center;
-    margin-top: 3px;
-    padding-top: 15px;
-}
-
-.carosel{
-    width: 100%;
-}
-
-.carosel-container{
-    display: flex;
-    flex-direction: row;
-    list-style-type: none;
-    justify-content: space-between;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    padding: 0px;
-    align-items: center;
-    height: 300px
-}
-
-.carosel-box{
-    position: relative;
-    display: inline-block;
-    height: 300px;
-    width: 400px;
-    background-color: rgb(102, 3, 168);
-    margin-left: 10px;
-    margin-right: 10px;
-    
-    
-}
-
-.portfolio-box{
-    text-align: center;
-    justify-items: center;
-    vertical-align:bottom;
-    word-wrap: break-word;
-    margin: 15px;
-}
-
-.carosel-box:hover{
-    color:rgb(16, 190, 31);;
-}
 
 
 .contact-container{
-    background-color: rgb(139, 94, 211);
     background-size: cover;
     height: 300px;
     width: auto;
@@ -219,9 +173,32 @@ video{
 .contact-flex{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
 
+}
+
+.email{
+    color: white;
+    font-size: 25px;
+    text-underline-position: unset;
+}
+
+.link{
+    color:white;
+    font-size: 40px;
+}
+
+.email:hover{
+    color:green;
+    font-weight: bolder;
+    cursor: pointer;
+}
+
+.link:hover{
+    color:green;
+    font-weight: bolder;
+    cursor: pointer;
 }
 
 .footer{
