--- a/style.css
+++ b/style.css
@@ -131,25 +131,6 @@ video{
     width: 300px;
 }
 
-.bio-container{
-    background-size: auto;
-    height: 650px;
-    width: auto;
-}
-
-.bio-title{
-    text-align: center;
-    margin-top: 3px;
-    padding-top: 15px;
-    margin-bottom: 3px;
-    font-size: 36px;
-}
-
-.bio-text{
-    text-align: center;
-    margin:3px;
-}
-
 .skills-container{
     background-size: cover;
     height: 450px;
@@ -210,6 +191,76 @@ video{
 
 .course:hover{
     color:green;
+}
+
+.bio-container{
+    background-size: auto;
+    height: 650px;
+    width: auto;
+}
+
+.bio-flex{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.friends-pic-container{
+    height: 500px;
+    width: auto;
+}
+
+#friends-pic{
+    border-radius: 10px;
+    height: 500px;
+    width: auto;
+}
+
+.bio-title{
+    text-align: center;
+    margin-top: 3px;
+    padding-top: 15px;
+    margin-bottom: 3px;
+    font-size: 36px;
+}
+
+.hobbies-title{
+    font-size: 27px;
+}
+
+.hobby{
+    font-size: 20px;
+}
+
+.hobby:hover{
+    color: green;
+}
+
+.bio-text-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: space-around;
+}
+
+.bio-text{
+    text-align: center;
+    margin:3px;
+}
+
+.me-title{
+    font-size: 27px;
+}
+
+.me{
+    width:400px;
+    font-size: 20px;
+}
+
+.me:hover{
+    color: green;
 }
 
 .contact-container{
